Fix setting partition path when restoring partitions.

BUG: 399791